# iga-236

./: .gitignore  .samignore  Makefile  README.md  pyproject.toml  samconfig.toml  template-users-table.yaml  template.yaml  thanks.txt  thanks.txt.asc
_attic/: pyproject.toml
_attic/src/: sendmail_o365v0.py  sendmail_o365v1.py  sendmail_o365v2.py  sendmail_o365v3.py  sendmail_o365v4.py  sendmail_o365v5.py
bogus_pdfs/: bang.py  bang10.py  bang2.py  bang3.py  bang4.py  bang5.py  make-ecar-pdf.py  make10.py  make11.py  make2.py
emailer/: Makefile  dynamodb_iga236-guids.json  email_gpg_random_quotes.py  sendmail_gmail.py  sendmail_o365v5.py  update_and_report.py
etc/: dynamodb_iga236-guids.json  random_quotes.py
iga_236/: requirements.txt
iga_236/home_app/: main.py
iga_236/home_app/static/: Makefile  infobox-test-variant.html  infobox-test.html  infobox.css  site.css
iga_236/home_app/static/lab1_crypto/: index.html
iga_236/home_app/static/lab1_crypto/.vite/: manifest.json
iga_236/home_app/static/lab1_crypto/assets/: index-7LKtjtf7.css  index-BHXZtTcA.js  index-BHXZtTcA.js.map
iga_236/home_app/static/lab1_guesser/: index.html
iga_236/home_app/static/lab1_guesser/.vite/: manifest.json
iga_236/home_app/templates/: 404.html  about.html  base.html  dashboard.html  error_generic.html  error_user_not_registered.html  help.html  index.html  login.html  logout.html  privacy.html  terms.html
iga_236/tests/: test_null.py
lab1_crypto/: Makefile  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
lab1_crypto/src/: index.html  main.ts  pgpWorker.ts  styles.css
lab1_crypto/src/crypto_app/: server.py
lab1_crypto/src/crypto_app/src/: pgpWorker.ts
lab1_guesser/: .codecov.yml  .eslintignore  .eslintrc.json  Makefile  README.md  TESTING.md  eslint.config.js  package-lock.json  package.json  vite.config.ts  vitest.config.ts
lab1_guesser/.github/workflows/: test.yml
lab1_guesser/src/: NOTES.md  index.html  main.ts  styles.css  utils.test.ts  utils.ts  what-to-send
simulation1/: generate_handout.py  pyproject.toml  roles.json
(+3 files in other folders)
